start of work to define package models, need to build container next
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+# docker-compose up -d
+
 db:
   image: postgres
   environment:
@@ -5,13 +7,13 @@ db:
 
 uwsgi:
   restart: always
-  image: spack/spackmon
+  build: .
   volumes:
     - .:/code
     - ./static:/var/www/static
     - ./images:/var/www/images
   links:
-    - redis
+    - db
 
 nginx:
   restart: always
