--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ sendgrid==6.4.3
 # just for postgres
 psycopg2-binary==2.8.5
 django-gravatar2==1.4.4
-django-taggie==1.3.0
+django-taggit==1.3.0
 djangorestframework==3.11.1
 social-auth-app-django==4.0.0
