--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ psycopg2-binary==2.8.5
 django-gravatar2==1.4.4
 django-taggit==1.3.0
 djangorestframework==3.11.1
+django-crispy-forms==1.11.0
 social-auth-app-django==4.0.0
+ipython
+yaml
+
