--- a/nginx/uwsgi.ini
+++ b/nginx/uwsgi.ini
@@ -9,7 +9,7 @@ log-date = true
 max-requests = 5000
 http-timeout = 3600000
 socket-timeout = 120
-wsgi-file = shub/wsgi.py
+wsgi-file = spackmon/wsgi.py
 ignore-sigpipe = true
 ignore-write-errors = true
 disable-write-exception = true
