--- a/spackmon/settings.yml
+++ b/spackmon/settings.yml
@@ -30,10 +30,19 @@ SENDGRID_API_KEY: null
 SENDGRID_SENDER_EMAIL: null
 DOMAIN_NAME: http://127.0.0.1
 DOMAIN_PORT: 5000
-REQUIRE_AUTH: true
 
-# Keep packages private
-PRIVATE_ONLY: null
+# Set to non Null to disable authentication (not recommended)
+# To change autheticated views, edit settings.py
+DISABLE_AUTHENTICATION: null
 
 # Caching
-ENABLE_CACHE: false
+# Will default to local "cache" folder in repository root
+CACHE_DIR: null
+
+# API
+# The prefix for the spack monitor API (ms == monitor spec)
+URL_API_PREFIX: ms1
+API_TOKEN_EXPIRES_SECONDS: 6000
+
+# If you change the authentication server, set to non null
+AUTH_SERVER: null
