refactor of database design to remove configuration
after discussion with @becker33 we decided to remove the model
of a configuration, as it is just a list of packages. We can preserve
the same relationships and metadata by just having a package be at the
top level. This update also enforces creation of the spec file dumps
using a full hash instead of a build hash, as this will be needed
to ensure uniqueness of dependencies

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/settings.yml
+++ b/spackmon/settings.yml
@@ -46,3 +46,4 @@ API_TOKEN_EXPIRES_SECONDS: 6000
 
 # If you change the authentication server, set to non null
 AUTH_SERVER: null
+AUTH_INSTRUCTIONS: https://spack-monitor.readthedocs.io/en/latest/getting_started/auth.html
