start of work to add Build table
We need to include BuildEnvironment and objects alongside a Spec build,
and we need it to be possible to build the same spec in different environments
and have different ids/rows in the table. This is start of work to do that,
and also clean up some of the API namespace. I next need to go into spack
and refactor for this structure, and figure out how to get a list of object
files after a build to (eventually) parse and send to the spack monitor

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==3.0.8
 django-ratelimit==3.0.0
 django-extensions==3.0.2
+graphviz
+pydotplus
 sendgrid==6.4.3
 # just for postgres
 psycopg2-binary==2.8.5
