typo forgot -r to install requirements
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
         run: |
           export PATH="/usr/share/miniconda/bin:$PATH"
           source activate testing
-          pip install requirements.txt
+          pip install -r requirements.txt
           python runtests.py
