--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ psycopg2-binary==2.8.5
 django-gravatar2==1.4.4
 django-taggit==1.3.0
 djangorestframework==3.11.2
+django-rest-swagger
 django-crispy-forms==1.11.0
 social-auth-app-django==4.0.0
 ipython
