adding user accounts
a user must now login to generate a token, and builds are associated with that user

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/https/docker-compose.yml
+++ b/https/docker-compose.yml
@@ -6,6 +6,11 @@ db:
 uwsgi:
   restart: always
   build: .
+
+  # Add your GitHub key and secret here
+  environment:
+    - SOCIAL_AUTH_GITHUB_KEY=
+    - SOCIAL_AUTH_GITHUB_SECRET=
   volumes:
     - .:/code
     - ./static:/var/www/static
