--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,11 @@ db:
 uwsgi:
   restart: always
   build: .
+
+  # Add your GitHub key and secret here
+  environment:
+    - SOCIAL_AUTH_GITHUB_KEY=
+    - SOCIAL_AUTH_GITHUB_SECRET=
   volumes:
     - .:/code
     - ./static:/var/www/static
