--- a/spackmon/settings.yml
+++ b/spackmon/settings.yml
@@ -29,7 +29,7 @@ HELP_CONTACT_URL: https://github.com/spack/spack-monitor/issues
 SENDGRID_API_KEY: null
 SENDGRID_SENDER_EMAIL: null
 DOMAIN_NAME: http://127.0.0.1
-DOMAIN_PORT: null
+DOMAIN_PORT: 5000
 
 # Set to non Null to disable authentication (not recommended)
 # To change autheticated views, edit settings.py
@@ -37,7 +37,7 @@ DISABLE_AUTHENTICATION: null
 
 # Enable authentication with GitHub (requires environment export of
 # SOCIAL_AUTH_GITHUB_KEY and SOCIAL_AUTH_GITHUB_SECRET
-ENABLE_GITHUB_AUTH: true
+ENABLE_GITHUB_AUTH: false
 
 # Caching
 # Will default to local "cache" folder in repository root
