adding user accounts (#33)
* adding user accounts
a user must now login to generate a token, and builds are associated with that user

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/settings.yml
+++ b/spackmon/settings.yml
@@ -35,6 +35,10 @@ DOMAIN_PORT: 5000
 # To change autheticated views, edit settings.py
 DISABLE_AUTHENTICATION: null
 
+# Enable authentication with GitHub (requires environment export of
+# SOCIAL_AUTH_GITHUB_KEY and SOCIAL_AUTH_GITHUB_SECRET
+ENABLE_GITHUB_AUTH: false
+
 # Caching
 # Will default to local "cache" folder in repository root
 CACHE_DIR: null
