adding support for larger builds
also sorting the front page table with fails /cancelled at the top, fixing
a bug with by user filter, and making the default table size 100

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/settings.yml
+++ b/spackmon/settings.yml
@@ -37,7 +37,7 @@ DISABLE_AUTHENTICATION: null
 
 # Enable authentication with GitHub (requires environment export of
 # SOCIAL_AUTH_GITHUB_KEY and SOCIAL_AUTH_GITHUB_SECRET
-ENABLE_GITHUB_AUTH: false
+ENABLE_GITHUB_AUTH: true
 
 # Caching
 # Will default to local "cache" folder in repository root
