--- a/https/docker-compose.yml
+++ b/https/docker-compose.yml
@@ -1,35 +1,43 @@
-db:
-  image: postgres
-  environment:
-   - POSTGRES_HOST_AUTH_METHOD=trust
+# docker-compose up -d
+version: "2"
 
-uwsgi:
-  restart: always
-  build: .
+services:
+  db:
+    image: postgres
+    restart: always
+    container_name: db
+    environment:
+     - POSTGRES_HOST_AUTH_METHOD=trust
 
-  # Add your GitHub key and secret here
-  environment:
-    - SOCIAL_AUTH_GITHUB_KEY=
-    - SOCIAL_AUTH_GITHUB_SECRET=
-  volumes:
-    - .:/code
-    - ./static:/var/www/static
-    - ./images:/var/www/images
-  links:
-    - db
+  uwsgi:
+    restart: always
+    container_name: uwsgi
+    build: .
 
-nginx:
-  restart: always
-  image: nginx
-  ports:
-    - "80:80"
-    - "443:443"
-  volumes:
-    - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    - ./nginx/uwsgi_params.par:/etc/nginx/uwsgi_params.par:ro
-    - /etc/ssl/certs:/etc/ssl/certs:ro
-    - /etc/ssl/private:/etc/ssl/private:ro
-  volumes_from:
-    - uwsgi
-  links:
-    - uwsgi
+    # Add your GitHub key and secret here
+    environment:
+      - SOCIAL_AUTH_GITHUB_KEY=
+      - SOCIAL_AUTH_GITHUB_SECRET=
+    volumes:
+      - .:/code
+      - ./static:/var/www/static
+      - ./images:/var/www/images
+    links:
+      - db
+
+  nginx:
+    restart: always
+    container_name: nginx
+    image: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/uwsgi_params.par:/etc/nginx/uwsgi_params.par:ro
+      - /etc/ssl/certs:/etc/ssl/certs:ro
+      - /etc/ssl/private:/etc/ssl/private:ro
+    volumes_from:
+      - uwsgi
+    links:
+      - uwsgi
