--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django>=3.1.13
+Django>=3.1.13,<4.0
 django-ratelimit==3.0.0
 django-extensions==3.0.2
 graphviz
@@ -6,7 +6,7 @@ pydotplus
 sendgrid==6.4.3
 sentry-sdk
 # just for postgres
-psycopg2-binary==2.8.5
+psycopg2-binary==2.8.6
 django-taggit==1.3.0
 djangorestframework==3.11.2
 django-rest-swagger
