--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pydotplus
 sendgrid==6.4.3
 sentry-sdk
 # just for postgres
-psycopg2-binary==2.8.6
+psycopg2-binary
 django-taggit==1.3.0
 djangorestframework==3.11.2
 django-rest-swagger
@@ -18,5 +18,6 @@ ipython
 pyaml
 gunicorn
 whitenoise
-symbolator-python
 pandas
+django-river-ml
+django-autocomplete-light
