--- a/spackmon/settings.yml
+++ b/spackmon/settings.yml
@@ -32,6 +32,7 @@ DOMAIN_NAME: http://127.0.0.1
 DOMAIN_PORT: 5000
 
 # Set to non Null to disable authentication (not recommended)
+# Default is disabled assuming development or an open server
 # To change autheticated views, edit settings.py
 DISABLE_AUTHENTICATION: null
 
