--- a/spackmon/settings.yml
+++ b/spackmon/settings.yml
@@ -23,6 +23,12 @@ GITHUB_DOCUMENTATION: https://spack-monitor.readthedocs.io
 # Force use of sqlite (set to none null)
 USE_SQLITE: null
 
+# Online machine learning
+MODEL_NAME: spack-errors
+DISABLE_ONLINE_ML: false
+
+# TODO we will eventually support loading a model from a URL
+
 # Global server settings
 ENVIRONMENT: test
 HELP_CONTACT_URL: https://github.com/spack/spack-monitor/issues
