--- a/spackmon/settings.yml
+++ b/spackmon/settings.yml
@@ -24,7 +24,10 @@ GITHUB_DOCUMENTATION: https://spack-monitor.readthedocs.io
 USE_SQLITE: null
 
 # Online machine learning
-MODEL_NAME: spack-errors
+MODEL_NAME: spack-dbstream-errors
+
+# If the model name isn't found, load from file
+MODEL_LOAD_FROM_FILE: /code/spack-dbstream-errors.pkl
 DISABLE_ONLINE_ML: false
 
 # TODO we will eventually support loading a model from a URL
