adding support for upload of creme model, and for single error reports and predictions
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,6 @@ gunicorn
 whitenoise
 pandas
 django-river-ml
+creme
 django-autocomplete-light
+git+https://github.com/vsoch/online-ml-custom.git@main
